Trying to dix the build